豆瓣视频列表页面0112

--- a/readerMoive/app.json
+++ b/readerMoive/app.json
@@ -3,7 +3,8 @@
     "pages/post/post",
     "pages/welcome/welcome",
     "pages/post/post-detail/post-detail",
-    "pages/movies/movies"
+    "pages/movies/movies",
+    "pages/movies/more-movie/movie-movie"
   ],
   "window": {
     "navigationBarBackgroundColor": "#b3d4db",
