--- a/readerMoive/app.json
+++ b/readerMoive/app.json
@@ -1,10 +1,11 @@
 {
   "pages": [
-    "pages/post/post",
     "pages/welcome/welcome",
+    "pages/post/post",
     "pages/post/post-detail/post-detail",
     "pages/movies/movies",
-    "pages/movies/more-movie/movie-movie"
+    "pages/movies/more-movie/movie-movie",
+    "pages/movies/more-detail/movie-detail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#b3d4db",
